--- a/fruitBasket/src/styles.scss
+++ b/fruitBasket/src/styles.scss
@@ -1,5 +1,6 @@
-body{
-    background-color: #06171E;
+/* body{
+    //background-color: #06171E;
+      background-color: white;
 }
 
 *{
@@ -28,5 +29,5 @@ body{
     background-color: #00000000;
     border: 1px solid #00000000;
   }
-  
+   */
  
