TypeScript variable im HTML anzeigen

--- a/fruitBasket/src/styles.scss
+++ b/fruitBasket/src/styles.scss
@@ -1,6 +1,6 @@
-/* body{
-    //background-color: #06171E;
-      background-color: white;
+body{
+    background-color: #06171E;
+   
 }
 
 *{
@@ -29,5 +29,5 @@
     background-color: #00000000;
     border: 1px solid #00000000;
   }
-   */
+  
  
