--- a/fruitBasket/src/app/fruitlist/fruitlist.component.html
+++ b/fruitBasket/src/app/fruitlist/fruitlist.component.html
@@ -1,1 +1,18 @@
-<p>fruitlist works!</p>
+<p>fruitlist works {{ howIsWorks }}!</p>
+<p>{{ fruitlist[3].name }}</p>
+<p>{{ usernames[1] }}</p>
+
+@for(item of fruitlist; track item.name; let index = $index){
+<p>{{ index }}: {{ item.name }}</p>
+}
+
+<ul>
+  <li *ngFor="let user of users">
+    Name: {{ user.name }}, Email: {{ user.email }}
+  </li>
+</ul>
+<ul>
+  <li *ngFor="let item of fruitlist">
+    Name: {{ fruitlist[0].name }}, description: {{ fruitlist[0].description }}
+  </li>
+</ul>
