--- a/fruitBasket/src/app/fruitlist/fruitlist.component.html
+++ b/fruitBasket/src/app/fruitlist/fruitlist.component.html
@@ -1,18 +1,55 @@
-<p>fruitlist works {{ howIsWorks }}!</p>
-<p>{{ fruitlist[3].name }}</p>
-<p>{{ usernames[1] }}</p>
+<div class="fruitlist_content">
+  @for(fruit of fruitlist; track fruit.name){
 
-@for(item of fruitlist; track item.name; let index = $index){
-<p>{{ index }}: {{ item.name }}</p>
-}
+  <!-- ---------------------    singleFruitBox      -------------------- -->
 
-<ul>
-  <li *ngFor="let user of users">
-    Name: {{ user.name }}, Email: {{ user.email }}
-  </li>
-</ul>
-<ul>
-  <li *ngFor="let item of fruitlist">
-    Name: {{ fruitlist[0].name }}, description: {{ fruitlist[0].description }}
-  </li>
-</ul>
+  <section class="singleFruitBox">
+    <!-- 
+    <div>
+      <img
+        *ngIf="fruit.stars < 3"
+        src="./assets/img/fruits/{{ fruit.img }}"
+        alt=""
+      />
+      <span *ngIf="fruit.stars >= 3">Hopps</span>
+    </div>
+    -->
+    <div>
+      @if(fruit.stars > 4){
+      <img src="./assets/img/fruits/{{ fruit.img }}" alt="" srcset="" />
+      } @else {Hopps}
+    </div>
+    <div>
+      <h2>{{ fruit.name }}</h2>
+      <div>
+        <p><b>Bewertung:</b></p>
+        <div>
+          <img src="./assets/img/stars/star.svg" alt="" srcset="" />
+          <img src="./assets/img/stars/star.svg" alt="" srcset="" />
+          <img src="./assets/img/stars/star.svg" alt="" srcset="" />
+          <img src="./assets/img/stars/star-half.svg" alt="" srcset="" />
+          <img src="./assets/img/stars/star-empty.svg" alt="" srcset="" />
+          <p>({{ fruit.stars }})</p>
+        </div>
+      </div>
+      <div><b>Art:</b><br />{{ fruit.genus }}</div>
+      <div><b>Beschreibung:</b><br />{{ fruit.description }}</div>
+      <div>
+        <div>
+          <!--  Praxis: @for (@empty)// wenn etwas leer ist (Bsp: reviews)  -->
+          @for(review of fruit.reviews; track review){
+          <div>
+            <b>{{ review.name }}:</b><br />{{ review.text }}
+          </div>
+          } @empty {no comments}
+        </div>
+        <div>
+          <input type="text" /><button>
+            <img src="./assets/img/arrow-35-32.png" alt="" srcset="" />
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  }
+</div>
