--- a/fruitBasket/src/app/fruitlist/fruitlist.component.scss
+++ b/fruitBasket/src/app/fruitlist/fruitlist.component.scss
@@ -7,9 +7,21 @@
     flex-direction: column;
     padding: 64px 0;
 }
+/* -------------------------------------test */
+.fontColorGood {
+    color: green;
+}
+
+.fontColorBad {
+    color: red;
+}
+
+.bgColor {
+    background-color: white;
+}
 
 
-/* -------------------------- singleFruitBox ------------------------------------------ */
+/* ------------------ singleFruitBox ----------------------- */
 
 .singleFruitBox {
     padding-left: 200px;
