--- a/fruitBasket/src/app/fruitlist/singlefruit/singlefruit.component.html
+++ b/fruitBasket/src/app/fruitlist/singlefruit/singlefruit.component.html
@@ -1,1 +1,74 @@
-<p>singlefruit works!</p>
+<section class="singleFruitBox">
+  <!-- 
+    <div>
+      <img
+        *ngIf="fruit.stars < 3"
+        src="./assets/img/fruits/{{ fruit.img }}"
+        alt=""
+      />
+      <span *ngIf="fruit.stars >= 3">Hopps</span>
+    </div>
+    -->
+  <div>
+    @if(fruit.stars > 1){
+    <img src="./assets/img/fruits/{{ fruit.img }}" alt="" srcset="" />
+    } @else {Hopps}
+  </div>
+  <div>
+    <h2>{{ fruit.name }}</h2>
+    <div>
+      <p><b>Bewertung:</b></p>
+
+      <div>
+        <!-- 08 - Praxis: @for, @if, @else  -->
+        <!-- schreibe hier ein switch case -->
+        @for(count of [1,2,3,4,5]; track fruit ){ @if(fruit.stars >= count){
+        <img src="./assets/img/stars/star.svg" alt="" srcset="" />
+        }@else if (fruit.stars >= count - 0.5) {
+        <img src="./assets/img/stars/star-half.svg" alt="" srcset="" />
+        }@else {<img
+          src="./assets/img/stars/star-empty.svg"
+          alt=""
+          srcset=""
+        />} }
+        <!-- [ngStyle] / [ngStyle] (+ternaryOperator) 
+             <p
+            [ngStyle]="{
+              color: fruit.stars > 3 ? 'green' : 'red',
+              'background-color': fruit.stars > 3 ? 'white' : 'blue'
+            }"
+          >
+            ({{ fruit.stars }})
+          </p> -->
+        <!-- [ngClass] -->
+        <!--   <p [ngClass]="'fontColorBad bgColor '">({{ fruit.stars }})</p> -->
+        <!--  <p
+            [ngClass]="{
+              'fontColorBad ': fruit.stars < 3,
+              'fontColorGood ': fruit.stars >= 3
+            }"
+          >
+            ({{ fruit.stars }})
+          </p> -->
+        <p>({{ fruit.stars }})</p>
+      </div>
+    </div>
+    <div><b>Art:</b><br />{{ fruit.genus }}</div>
+    <div><b>Beschreibung:</b><br />{{ fruit.description }}</div>
+    <div>
+      <div>
+        <!--  Praxis: @for (@empty)// wenn etwas leer ist (Bsp: reviews)  -->
+        @for(review of fruit.reviews; track review){
+        <div>
+          <b>{{ review.name }}:</b><br />{{ review.text }}
+        </div>
+        } @empty {no comments}
+      </div>
+      <div>
+        <input type="text" /><button>
+          <img src="./assets/img/arrow-35-32.png" alt="" srcset="" />
+        </button>
+      </div>
+    </div>
+  </div>
+</section>
