--- a/fruitBasket/src/app/fruitlist/singlefruit/singlefruit.component.html
+++ b/fruitBasket/src/app/fruitlist/singlefruit/singlefruit.component.html
@@ -22,7 +22,7 @@
       <div>
         <!-- 08 - Praxis: @for, @if, @else  -->
         <!-- schreibe hier ein switch case -->
-        @for(count of [1,2,3,4,5]; track fruit ){ @if(fruit.stars >= count){
+        @for(count of [1,2,3,4,5]; track count ){ @if(fruit.stars >= count){
         <img src="./assets/img/stars/star.svg" alt="" srcset="" />
         }@else if (fruit.stars >= count - 0.5) {
         <img src="./assets/img/stars/star-half.svg" alt="" srcset="" />
@@ -66,7 +66,12 @@
       </div>
       <div>
         <input type="text" /><button>
-          <img src="./assets/img/arrow-35-32.png" alt="" srcset="" />
+          <img
+            (click)="emitName()"
+            src="./assets/img/arrow-35-32.png"
+            alt=""
+            srcset=""
+          />
         </button>
       </div>
     </div>
