--- a/fruitBasket/src/app/fruitlist/singlefruit/singlefruit.component.html
+++ b/fruitBasket/src/app/fruitlist/singlefruit/singlefruit.component.html
@@ -65,9 +65,9 @@
         } @empty {no comments}
       </div>
       <div>
-        <input type="text" /><button>
+        <input [(ngModel)]="inputData" type="text" /><button>
           <img
-            (click)="emitName()"
+            (click)="sendInputData()"
             src="./assets/img/arrow-35-32.png"
             alt=""
             srcset=""
